<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:text="@string/dev_id_"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/et_id"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
            <TextView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="Uid:"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/id_status"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:padding="2dp"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:text="@string/ip_adrs"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_search_ip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint"
                android:inputType="text"
                android:padding="5dp"
                android:background="@drawable/round_edittext_transparent"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:text="@string/port"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_search_port"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_port"
                android:inputType="number"
                android:padding="5dp"
                android:textSize="22sp"
                android:background="@drawable/round_edittext_transparent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/btn_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/item_background_selector_button"
                android:fontFamily="serif-monospace"
                android:padding="8dp"
                android:text="@string/test_btn_connection"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar_setting"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/inf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assortiment_count_stng"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_close_type"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/txt_asl_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_bill_close_type_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>